--- a/.github/workflows/pipeline-seleniumide.yaml
+++ b/.github/workflows/pipeline-seleniumide.yaml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
     - name: Chechout code
-        uses: actions/chechout@v3
+        uses: actions/checkout@v3
     
     - name: Set up .Net
         uses: actions/setup-dotnet@v3
